Mise à jour test3 : cartes, sécurité Keycloak, stocks, transferts et améliorations UI